# HillelProject1

./: .env-example  README.md  docker-compose.yaml  pyproject.toml  ww.py
backend_api/: Dockerfile  pyproject.toml
backend_api/app/: alembic.ini  app_factory.py  main.py
backend_api/app/applications/auth/: auth_handler.py  router.py  security.py
backend_api/app/applications/products/: crud.py  models.py  router.py  schemas.py
backend_api/app/applications/purchases/: crud.py  models.py  pay.py  router.py  schemas.py
backend_api/app/applications/users/: crud.py  models.py  router.py  schemas.py
backend_api/app/migrations/: env.py
backend_api/app/migrations/versions/: 2025_07_02_1744-77caceca3aec_create_database.py  2025_07_03_1236-a601ede7c63e_updated_db.py  2025_07_03_1347-769d6f741e08_cart.py  2025_07_04_1408-a00344167932_create_purchases.py
backend_api/app/services/rabbit/: rabbitmq_service.py
documentation/docs/: index.md  tasks.md
frontend/: pyproject.toml
frontend/app/backend_api/: api.py
frontend/app/routers/: main_page_router.py
frontend/app/templates/: cart.html  product_detail.html
nginx/: nginx.conf
notification_service/: pyproject.toml
notification_service/app/: main.py
